# qwebengine-test-qt6

./: .gitignore  CMakeLists.txt
src/: Widget.cpp  Widget.h  main.cpp
